manifests/services/akkoma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akkoma
  namespace: akkoma
spec:
  type: ClusterIP
  selector: {}
  ports:
    - name: http
      port: 4000
      protocol: TCP
      targetPort: 4000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: akkoma
  namespace: akkoma
subsets:
  - addresses:
      - ip: 100.109.240.128
    ports:
      - name: http
        port: 4000
        protocol: TCP
