manifests/services/akkoma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akkoma
  namespace: akkoma
  annotations:
    cert-manager.io/cluster-issuer: "main"
    # 200 Megabytes
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    # Ensure client IPs from Cloudflare are preserved
    nginx.ingress.kubernetes.io/configuration-snippet: "real_ip_header CF-Connecting-IP;"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - satania.social
      secretName: satania-social
  rules:
    - host: satania.social
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: akkoma
                port:
                  number: 4000
